<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="discounted_price"><strike>$25</strike></string>
    <string name="sun_care">Sun Care</string>
    <string name="treatments">Treatments</string>
    <string name="eye_care">Eye Care</string>
    <string name="moisturizers">Moisturizers</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unisex">Unisex</string>
    <string name="go_back_mainpage_label">Anasayfaya Git</string>
    <string name="selling_fast_label">- Selling Fast</string>
    <string name="product_description_label">Ürün Açıklaması</string>
    <string name="where_label">Hangi Mağazada Var?</string>
    <string name="add_to_cart_label">Add to Cart</string>
    <string name="added_to_cart_label">Sepete Eklendi</string>

</resources>