<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="42dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_detail_product_images"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_product_sale_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/selling_fast_label"
            android:textAlignment="center"
            android:textColor="#2975FF"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/vp_detail_product_images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_detail_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            tools:text="Beymen Collection"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="24sp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_product_sale_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/ly_detail_price_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_detail_old_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discounted_price"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/text_grey"
                android:textStyle="bold"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="$15"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_desc_label"
            android:text="@string/product_description_label"
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/ly_detail_price_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="%70 Pamuk, %30 Polyester"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/text_black"/>

        <include
            android:id="@+id/tv_detail_amount_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/view_amount_picker"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_amount_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btn_where_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/where_label"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="48dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:background="@drawable/product_img_background"
            app:layout_constraintTop_toBottomOf="@id/rv_sizes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart_label"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/btn_where_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
